--- a/src/Components/CSS/footer.css
+++ b/src/Components/CSS/footer.css
@@ -1,5 +1,5 @@
 .footer {
-    background-color: var(--primary-color);
+    background-color: #222;
     color: var(--background-color);
     text-align: center;
     padding: 20px;
